--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: order
-          image: 879772956301.dkr.ecr.ap-northeast-2.amazonaws.com/user01-order:latest
+          image: 879772956301.dkr.ecr.ca-central-1.amazonaws.com/user22-order:latest
           ports:
             - containerPort: 8080
           env:
@@ -64,7 +64,7 @@ spec:
     spec:
       containers:
         - name: stock
-          image: 879772956301.dkr.ecr.ap-northeast-2.amazonaws.com/user01-stock:latest
+          image: 879772956301.dkr.ecr.ca-central-1.amazonaws.com/user22-stock:latest
           ports:
             - containerPort: 8080
           readinessProbe:
@@ -104,7 +104,7 @@ spec:
     spec:
       containers:
         - name: payment
-          image: 879772956301.dkr.ecr.ap-northeast-2.amazonaws.com/user01-payment:latest
+          image: 879772956301.dkr.ecr.ca-central-1.amazonaws.com/user22-payment:latest
           ports:
             - containerPort: 8080
           readinessProbe:
@@ -144,7 +144,7 @@ spec:
     spec:
       containers:
         - name: dashboard
-          image: 879772956301.dkr.ecr.ap-northeast-2.amazonaws.com/user01-dashboard:latest
+          image: 879772956301.dkr.ecr.ca-central-1.amazonaws.com/user22-dashboard:latest
           ports:
             - containerPort: 8080
           readinessProbe:
@@ -184,7 +184,7 @@ spec:
     spec:
       containers:
         - name: rent
-          image: 879772956301.dkr.ecr.ap-northeast-2.amazonaws.com/user01-rent:latest
+          image: 879772956301.dkr.ecr.ca-central-1.amazonaws.com/user22-rent:latest
           ports:
             - containerPort: 8080
           readinessProbe:
@@ -226,11 +226,51 @@ spec:
     spec:
       containers:
         - name: gateway
-          image: 879772956301.dkr.ecr.ap-northeast-2.amazonaws.com/user01-gateway:latest
+          image: 879772956301.dkr.ecr.ca-central-1.amazonaws.com/user22-gateway:v1
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
 
+
+---
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: point
+  labels:
+    app: point
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: point
+  template:
+    metadata:
+      labels:
+        app: point
+    spec:
+      containers:
+        - name: point
+          image: 879772956301.dkr.ecr.ca-central-1.amazonaws.com/user22-point:v1
+          ports:
+            - containerPort: 8080
+          readinessProbe:
+            httpGet:
+              path: '/actuator/health'
+              port: 8080
+            initialDelaySeconds: 10
+            timeoutSeconds: 2
+            periodSeconds: 5
+            failureThreshold: 10
+          livenessProbe:
+            httpGet:
+              path: '/actuator/health'
+              port: 8080
+            initialDelaySeconds: 120
+            timeoutSeconds: 2
+            periodSeconds: 5
+            failureThreshold: 5
 
 
 ---
@@ -345,3 +385,22 @@ metadata:
   name: order-configmap
 data:
   order-url: payment:8080
+
+---
+
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: point
+  labels:
+    app: point
+spec:
+  ports:
+    - port: 8080
+      targetPort: 8080
+  selector:
+    app: point
+
+
+---  
