--- a/Rent/kubernetes/deployment.yml
+++ b/Rent/kubernetes/deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: rent
-          image: 879772956301.dkr.ecr.ap-northeast-2.amazonaws.com/user01-rent:latest
+          image: 879772956301.dkr.ecr.ca-central-1.amazonaws.com/user22-rent:latest
           ports:
             - containerPort: 8080
           readinessProbe:
