--- a/Stock/kubernetes/deployment.yml
+++ b/Stock/kubernetes/deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: stock
-          image: 879772956301.dkr.ecr.ap-northeast-2.amazonaws.com/user01-stock:latest
+          image: 879772956301.dkr.ecr.ca-central-1.amazonaws.com/user22-stock:latest
           ports:
             - containerPort: 8080
           readinessProbe:
