--- a/kubernetes/sharedmobility/dashboard.yml
+++ b/kubernetes/sharedmobility/dashboard.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: dashboard
-          image: 879772956301.dkr.ecr.ap-northeast-2.amazonaws.com/user01-dashboard:latest
+          image: 879772956301.dkr.ecr.ca-central-1.amazonaws.com/user22-dashboard:latest
           ports:
             - containerPort: 8080
           readinessProbe:
