--- a/kubernetes/sharedmobility/gateway.yml
+++ b/kubernetes/sharedmobility/gateway.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: gateway
-          image: 879772956301.dkr.ecr.ap-northeast-2.amazonaws.com/user01-gateway:latest
+          image: 879772956301.dkr.ecr.ca-central-1.amazonaws.com/user22-gateway:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
