--- a/kubernetes/sharedmobility/payment.yml
+++ b/kubernetes/sharedmobility/payment.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: payment
-          image: 879772956301.dkr.ecr.ap-northeast-2.amazonaws.com/user01-payment:latest
+          image: 879772956301.dkr.ecr.ca-central-1.amazonaws.com/user22-payment:latest
           ports:
             - containerPort: 8080
           readinessProbe:
